--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="178dp"
         android:layout_marginBottom="456dp"
-        android:text="Activity 1"
+        android:text="MainActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -26,9 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="123dp"
-        android:layout_marginBottom="386dp"
-        android:text="open activity 2" />
+        android:layout_marginEnd="217dp"
+        android:layout_marginBottom="54dp"
+        android:onClick="onButtonClickMain"
+        android:text="Go to second" />
 
     <Button
         android:id="@+id/button2"
@@ -36,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="138dp"
-        android:layout_marginBottom="-148dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="0dp"
         android:onClick="showDialog"
         android:text="Open Dialog" />
 
